// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LandingArticlesAndEvents null on articles and events components 1`] = `
<React.Fragment>
  <ForwardRef
    noGutters={false}
  >
    <ForwardRef
      className="my-3 d-none d-xl-block"
      xl="12"
    />
  </ForwardRef>
  <ForwardRef
    noGutters={false}
  >
    <ForwardRef
      className="my-3"
      xl="6"
    >
      <ForwardRef
        className="h-100"
        noGutters={false}
      >
        <ForwardRef
          className="d-xl-none"
          md="4"
          xl="12"
        >
          <Unknown
            MainLink={[Function]}
            date=""
            handleThumbClick={[Function]}
            isFetching={false}
            summary={
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "",
                  }
                }
              />
            }
            type="article"
            variant="featured"
          />
        </ForwardRef>
      </ForwardRef>
    </ForwardRef>
    <ForwardRef
      className="my-3"
      xl="6"
    >
      <Unknown
        events={Array []}
        isFetching={false}
      >
        <Unknown
          events={Array []}
          isFetching={false}
        />
      </Unknown>
    </ForwardRef>
  </ForwardRef>
</React.Fragment>
`;

exports[`LandingArticlesAndEvents renders articles and events 1`] = `
<React.Fragment>
  <ForwardRef
    noGutters={false}
  >
    <ForwardRef
      className="my-3 d-none d-xl-block"
      xl="12"
    >
      <Unknown
        MainLink={[Function]}
        categories={
          Array [
            Object {
              "drupal_id": 45,
              "icon": null,
              "title": "Industry News",
              "weight": 1,
            },
          ]
        }
        date="June 20, 2019"
        handleThumbClick={[Function]}
        imageUrl="undefined"
        isFetching={false}
        pictureSkeletonHeight={300}
        summary={
          <span
            dangerouslySetInnerHTML={
              Object {
                "__html": "An article about music.",
              }
            }
          />
        }
        title="Zeppelin"
        type="article"
        variant="featured"
      />
    </ForwardRef>
  </ForwardRef>
  <ForwardRef
    noGutters={false}
  >
    <ForwardRef
      className="my-3"
      xl="6"
    >
      <ForwardRef
        className="h-100"
        noGutters={false}
      >
        <ForwardRef
          className="d-xl-none"
          md="4"
          xl="12"
        >
          <Unknown
            MainLink={[Function]}
            categories={
              Array [
                Object {
                  "drupal_id": 45,
                  "icon": null,
                  "title": "Industry News",
                  "weight": 1,
                },
              ]
            }
            date="June 20, 2019"
            handleThumbClick={[Function]}
            imageUrl="undefined"
            isFetching={false}
            summary={
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "An article about music.",
                  }
                }
              />
            }
            title="Zeppelin"
            type="article"
            variant="featured"
          />
        </ForwardRef>
        <ForwardRef
          md="4"
          xl="6"
        >
          <Unknown
            MainLink={[Function]}
            categories={
              Array [
                Object {
                  "drupal_id": 45,
                  "icon": null,
                  "title": "Industry News",
                  "weight": 1,
                },
              ]
            }
            date="June 20, 2019"
            handleThumbClick={[Function]}
            imageUrl="undefined"
            title="Floyd"
            type="article"
          />
        </ForwardRef>
        <ForwardRef
          md="4"
          xl="6"
        >
          <Unknown
            MainLink={[Function]}
            categories={
              Array [
                Object {
                  "drupal_id": 45,
                  "icon": null,
                  "title": "Industry News",
                  "weight": 1,
                },
              ]
            }
            date="June 20, 2019"
            handleThumbClick={[Function]}
            imageUrl="undefined"
            title="Hendrix"
            type="article"
          />
        </ForwardRef>
      </ForwardRef>
    </ForwardRef>
    <ForwardRef
      className="my-3"
      xl="6"
    >
      <Unknown
        events={
          Array [
            Object {
              "attachments": null,
              "body_full": "<p>Some body text</p>
",
              "categories": Array [],
              "category_ancestors": Array [],
              "created": 1568326940,
              "drupal_id": 4,
              "event_category": Array [
                Object {
                  "drupal_id": 46,
                  "icon": null,
                  "title": "Industry Events",
                  "weight": 1,
                },
              ],
              "image_uri": Object {
                "source": "undefined",
                "umgc_banner": "undefined",
                "umgc_embedded": "undefined",
                "umgc_featured": "undefined",
                "umgc_thumbnail": "undefined",
              },
              "language": "en",
              "owner": Array [
                Object {
                  "drupal_id": 3,
                  "icon": null,
                  "title": "Global Travel",
                  "weight": 0,
                },
              ],
              "summary": "",
              "tags": Array [
                Object {
                  "drupal_id": 6,
                  "icon": null,
                  "title": "Lady Gaga",
                  "weight": 0,
                },
              ],
              "tags_ancestors": Array [
                Object {
                  "drupal_id": 6,
                  "icon": null,
                  "title": "Lady Gaga",
                  "weight": 0,
                },
              ],
              "title": "Test 1",
              "type": "event",
              "when_duration": 7199,
              "when_end": 1568370600,
              "when_start": 1568326940,
              "where": "Over the Rainbow",
            },
            Object {
              "attachments": null,
              "body_full": "<p>Some body text</p>
",
              "categories": Array [],
              "category_ancestors": Array [],
              "created": 1568326940,
              "drupal_id": 24,
              "event_category": Array [
                Object {
                  "drupal_id": 46,
                  "icon": null,
                  "title": "Industry Events",
                  "weight": 1,
                },
              ],
              "image_uri": Object {
                "source": "undefined",
                "umgc_banner": "undefined",
                "umgc_embedded": "undefined",
                "umgc_featured": "undefined",
                "umgc_thumbnail": "undefined",
              },
              "language": "en",
              "owner": Array [
                Object {
                  "drupal_id": 3,
                  "icon": null,
                  "title": "Global Travel",
                  "weight": 0,
                },
              ],
              "summary": "",
              "tags": Array [
                Object {
                  "drupal_id": 6,
                  "icon": null,
                  "title": "Lady Gaga",
                  "weight": 0,
                },
              ],
              "tags_ancestors": Array [
                Object {
                  "drupal_id": 6,
                  "icon": null,
                  "title": "Lady Gaga",
                  "weight": 0,
                },
              ],
              "title": "Test 1",
              "type": "event",
              "when_duration": 7199,
              "when_end": 1568370600,
              "when_start": 1568326940,
              "where": "Over the Rainbow",
            },
          ]
        }
        isFetching={false}
      >
        <Unknown
          events={
            Array [
              Object {
                "attachments": null,
                "body_full": "<p>Some body text</p>
",
                "categories": Array [],
                "category_ancestors": Array [],
                "created": 1568326940,
                "drupal_id": 4,
                "event_category": Array [
                  Object {
                    "drupal_id": 46,
                    "icon": null,
                    "title": "Industry Events",
                    "weight": 1,
                  },
                ],
                "image_uri": Object {
                  "source": "undefined",
                  "umgc_banner": "undefined",
                  "umgc_embedded": "undefined",
                  "umgc_featured": "undefined",
                  "umgc_thumbnail": "undefined",
                },
                "language": "en",
                "owner": Array [
                  Object {
                    "drupal_id": 3,
                    "icon": null,
                    "title": "Global Travel",
                    "weight": 0,
                  },
                ],
                "summary": "",
                "tags": Array [
                  Object {
                    "drupal_id": 6,
                    "icon": null,
                    "title": "Lady Gaga",
                    "weight": 0,
                  },
                ],
                "tags_ancestors": Array [
                  Object {
                    "drupal_id": 6,
                    "icon": null,
                    "title": "Lady Gaga",
                    "weight": 0,
                  },
                ],
                "title": "Test 1",
                "type": "event",
                "when_duration": 7199,
                "when_end": 1568370600,
                "when_start": 1568326940,
                "where": "Over the Rainbow",
              },
              Object {
                "attachments": null,
                "body_full": "<p>Some body text</p>
",
                "categories": Array [],
                "category_ancestors": Array [],
                "created": 1568326940,
                "drupal_id": 24,
                "event_category": Array [
                  Object {
                    "drupal_id": 46,
                    "icon": null,
                    "title": "Industry Events",
                    "weight": 1,
                  },
                ],
                "image_uri": Object {
                  "source": "undefined",
                  "umgc_banner": "undefined",
                  "umgc_embedded": "undefined",
                  "umgc_featured": "undefined",
                  "umgc_thumbnail": "undefined",
                },
                "language": "en",
                "owner": Array [
                  Object {
                    "drupal_id": 3,
                    "icon": null,
                    "title": "Global Travel",
                    "weight": 0,
                  },
                ],
                "summary": "",
                "tags": Array [
                  Object {
                    "drupal_id": 6,
                    "icon": null,
                    "title": "Lady Gaga",
                    "weight": 0,
                  },
                ],
                "tags_ancestors": Array [
                  Object {
                    "drupal_id": 6,
                    "icon": null,
                    "title": "Lady Gaga",
                    "weight": 0,
                  },
                ],
                "title": "Test 1",
                "type": "event",
                "when_duration": 7199,
                "when_end": 1568370600,
                "when_start": 1568326940,
                "where": "Over the Rainbow",
              },
            ]
          }
          isFetching={false}
        />
      </Unknown>
    </ForwardRef>
  </ForwardRef>
</React.Fragment>
`;
